--- a/cafe-with-vue/index.html
+++ b/cafe-with-vue/index.html
@@ -21,5 +21,12 @@
         <p>Copyright La belle vue 2020</p>
     </footer>
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/vue@2.7.10/dist/vue.js"></script>
+<script>
+    const app = new Vue({
+        el:'#app',
+    })
+</script>
 </body>
 </html>
