Ajout du propriete restaurantName dans l'objet data

--- a/cafe-with-vue/index.html
+++ b/cafe-with-vue/index.html
@@ -26,6 +26,9 @@
 <script>
     const app = new Vue({
         el:'#app',
+        data: {
+            restaurantName:''
+        }
     })
 </script>
 </body>
