--- a/cafe-with-vue/index.html
+++ b/cafe-with-vue/index.html
@@ -17,8 +17,20 @@
         ou avec un goûter réconfortant. Mais attention, vous verrez qu'il est
         difficile de s'arrêter.
     </p>
+
+    <h2>Contactez nous</h2>
+    <p>Adresse : 18 avenue du Beurre, Paris, France</p>
+    <p>Téléphone : 01 88 88 88 88</p>
+    <p>Email : hello@cafewithavue.bakery</p>
+    <p>Horaires :</p>
+    <ul>
+        <li>L-V: 06:00 à 16:00</li>
+        <li>Samedi: 07:00 à 14:00</li>
+        <li>Dimanche: 07:00 à 12:00</li>
+    </ul>
+
     <footer class="footer">
-        <p>Copyright La belle vue 2020</p>
+        <p>Copyright {{ restaurantName }} 2020</p>
     </footer>
 </div>
 
@@ -27,7 +39,8 @@
     const app = new Vue({
         el:'#app',
         data: {
-            restaurantName:'La belle vue'
+            restaurantName:'Café avec vue',
+
         }
     })
 </script>
