stockez et gerez des donnees - propriété calculée

--- a/cafe-with-vue/index.html
+++ b/cafe-with-vue/index.html
@@ -30,7 +30,7 @@
     </ul>
 
     <footer class="footer">
-        <p>Copyright {{ restaurantName }} 2020</p>
+        <p>{{copyright}}</p>
     </footer>
 </div>
 
@@ -39,8 +39,17 @@
     const app = new Vue({
         el:'#app',
         data: {
+            Adresse:'18 avenue du Beurre, Paris, France',
+            email: 'hello@cafewithavue.bakery',
+            phone:'01 88 88 88 88',
             restaurantName:'Café avec vue',
+        },
+        computed: {
+            copyright() {
+                const currentYear = new Date().getFullYear()
 
+                return `Copyright ${this.restaurantName} ${currentYear}`
+            }
         }
     })
 </script>
