--- a/cafe-with-vue/index.html
+++ b/cafe-with-vue/index.html
@@ -18,10 +18,35 @@
         difficile de s'arrêter.
     </p>
 
+    <section class="menu">
+        <h2>Menu</h2>
+        <div class="menu-item">
+            <img
+                    class="menu-item__image"
+                    src="https://via.placeholder.com/300x150"
+                    alt=""
+            />
+            <div>
+                <h3>Nom de l'article</h3>
+                <p>En stock</p>
+                <p>En rupture de stock</p>
+                <div>
+                    <label for="add-item-quantity">Quantité :</label>
+                    <input id="add-item-quantity" type="number" />
+                    <button>Ajouter au panier d'achat</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <aside class="shopping-cart">
+        <h2>Panier d'achat: 0 articles</h2>
+    </aside>
+
     <h2>Contactez nous</h2>
-    <p>Adresse : 18 avenue du Beurre, Paris, France</p>
-    <p>Téléphone : 01 88 88 88 88</p>
-    <p>Email : hello@cafewithavue.bakery</p>
+    <p>Adresse : {{address}}</p>
+    <p>Téléphone : {{phone}}</p>
+    <p>Email : {{email}}</p>
     <p>Horaires :</p>
     <ul>
         <li>L-V: 06:00 à 16:00</li>
@@ -39,10 +64,39 @@
     const app = new Vue({
         el:'#app',
         data: {
-            Adresse:'18 avenue du Beurre, Paris, France',
+            Address:'18 avenue du Beurre, Paris, France',
             email: 'hello@cafewithavue.bakery',
             phone:'01 88 88 88 88',
-            restaurantName:'Café avec vue',
+            restaurantName:'La belle vue',
+            simpleMenu: [
+                {
+                    name: "Croissant",
+                    image: {
+                        source: "./images/croissant.jpg",
+                        alt: "Un croissant"
+                    },
+                    inStock: true,
+                    quantity: 1
+                },
+                {
+                    name: "Baguette de pain",
+                    image: {
+                        source: "./images/french-baguette.jpeg",
+                        alt: "Quatre baguettes de pain"
+                    },
+                    inStock: true,
+                    quantity: 1
+                },
+                {
+                    name: "Éclair",
+                    image: {
+                        source: "./images/eclair.jpg",
+                        alt: "Éclair au chocolat"
+                    },
+                    inStock: false,
+                    quantity: 1
+                }
+            ]
         },
         computed: {
             copyright() {
